Fix role permissions, add user/auth controllers, and update frontend for better UX

--- a/viewer/src/main/resources/static/login.html
+++ b/viewer/src/main/resources/static/login.html
@@ -154,7 +154,7 @@
             You have been logged out successfully
         </div>
 
-        <form action="/login" method="POST">
+        <form id="loginForm" onsubmit="handleLogin(event)">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required autocomplete="off">
@@ -165,8 +165,48 @@
                 <input type="password" id="password" name="password" required>
             </div>
 
-            <button type="submit" class="btn">Sign In</button>
+            <button type="submit" class="btn" id="loginBtn">Sign In</button>
         </form>
+
+        <script>
+            async function handleLogin(e) {
+                e.preventDefault();
+                const btn = document.getElementById('loginBtn');
+                const errorMsg = document.getElementById('error-message');
+                const username = document.getElementById('username').value;
+                const password = document.getElementById('password').value;
+
+                btn.disabled = true;
+                btn.textContent = 'Signing in...';
+                errorMsg.style.display = 'none';
+
+                try {
+                    const response = await fetch('/api/auth/login', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ username, password })
+                    });
+
+                    if (response.ok) {
+                        const data = await response.json();
+                        localStorage.setItem('token', data.accessToken);
+                        localStorage.setItem('username', data.username);
+                        window.location.href = '/';
+                    } else {
+                        console.error('Login failed with status:', response.status);
+                        document.getElementById('error-message').innerText = `Login failed (Status: ${response.status})`;
+                        errorMsg.style.display = 'block';
+                        btn.disabled = false;
+                        btn.textContent = 'Sign In';
+                    }
+                } catch (err) {
+                    console.error(err);
+                    errorMsg.style.display = 'block';
+                    btn.disabled = false;
+                    btn.textContent = 'Sign In';
+                }
+            }
+        </script>
 
         <div class="demo-credentials">
             <p style="margin-bottom: 0.5rem; font-weight: 600;">Demo Credentials:</p>
